refactor: ExceptionsHandle format changed